Some small changes to t3 and t4, added report structure.

--- a/report/project.tex
+++ b/report/project.tex
@@ -78,6 +78,64 @@
 % CONTENT                                                             %
 %*********************************************************************%
 
+In this project report, we will describe our though process on implementing 
+the specifications from the different tasks.
+
+\section{Task 1}
+
+% Choices you made in modeling the controllers
+
+% Which assumptions were introduced and why?
+
+% Time the analysis tool took to synthesize each of the controllers
+
+% Problems or Shortcomings
+
+
+\section{Task 2}
+
+% Choices you made in modeling the controllers
+
+% Which assumptions were introduced and why?
+
+% Time the analysis tool took to synthesize each of the controllers
+
+% Problems or Shortcomings
+
+
+\section{Task 3}
+
+% Choices you made in modeling the controllers
+
+% Which assumptions were introduced and why?
+
+% Time the analysis tool took to synthesize each of the controllers
+
+% Problems or Shortcomings
+
+
+
+\section{Task 4}
+
+% Choices you made in modeling the controllers
+
+% Which assumptions were introduced and why?
+
+% Time the analysis tool took to synthesize each of the controllers
+
+% Problems or Shortcomings
+
+\section{Task 6}
+
+% Choices you made in modeling the controllers
+
+% Which assumptions were introduced and why?
+
+% Time the analysis tool took to synthesize each of the controllers
+
+% Problems or Shortcomings
+
+
 
 
 %*********************************************************************%
